--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav>
         <a href="?page=home">Home</a>
-        <a href="?page=home&subpage=subpage1">Home > Subpage 1</a>
-        <a href="?page=home&subpage=subpage2">Home > Subpage 2</a>
+        <a href="?page=page1&subpage=subpage1">page1 > Subpage 1</a>
+        <a href="?page=page1&subpage=subpage2">page1 > Subpage 2</a>
         <a href="?page=about">About</a>
     </nav>
 
