--- a/index.html
+++ b/index.html
@@ -1,89 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Page App</title>
-    <style>
-        .page { display: none; }
-        .page.active { display: block; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Multi-Page App</title>
+  <style>
+    .page { display: none; }
+    .page.active { display: block; }
+
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+    }
+    .navbar a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    .navbar .dropdown {
+      float: left;
+      overflow: hidden;
+    }
+    .navbar .dropdown .dropbtn {
+      font-size: 16px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
+    .navbar a:hover, .navbar .dropdown:hover .dropbtn {
+      background-color: #ddd;
+      color: black;
+    }
+    .navbar .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+    .navbar .dropdown-content a {
+      float: none;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
+    .navbar .dropdown-content a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .navbar .dropdown:hover .dropdown-content {
+      display: block;
+    }
+  </style>
 </head>
 <body>
-    <nav>
-        <a href="?page=home">Home</a>
-        <a href="?page=page1&subpage=subpage1">page1 > Subpage 1</a>
-        <a href="?page=page1&subpage=subpage2">page1 > Subpage 2</a>
-        <a href="?page=about">About</a>
-    </nav>
+  <div class="navbar">
+    <a href="<?= url ?>?page=home">Home</a>
+    <div class="dropdown">
+      <button class="dropbtn">Page 1 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="<?= url ?>?page=page1&subpage=subpage1">Subpage 1</a>
+        <a href="<?= url ?>?page=page1&subpage=subpage2">Subpage 2</a>
+      </div>
+    </div> 
+    <!-- <a href="<?= url ?>?page=page2">Page 2</a> -->
 
-    <div id="content">
-        <div id="home" class="page">
-            <h1>Home Page</h1>
-            <p>Welcome to the home page!</p>
-            <div id="subpage1" class="subpage">
-                <h2>Subpage 1</h2>
-                <p>Details of Subpage 1 under Home.</p>
-            </div>
-            <div id="subpage2" class="subpage">
-                <h2>Subpage 2</h2>
-                <p>Details of Subpage 2 under Home.</p>
-            </div>
-        </div>
-
-        <div id="about" class="page">
-            <h1>About Page</h1>
-            <p>About us content here.</p>
-        </div>
+   <!-- <a href="<?= url ?>?page=home">Home</a> -->
+    <div class="dropdown">
+      <button class="dropbtn">Page 2 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="<?= url ?>?page=page2&subpage=subpage1">Subpage 1</a>
+        <a href="<?= url ?>?page=page2&subpage=subpage2">Subpage 2</a>
+      </div>
     </div>
 
-    <script>
-        const googleAppScriptUrl = 'https://script.google.com/macros/s/AKfycbz_tKQNuKBTn3BLSmcR0cWz8suVgD3OGhtXm9xsVQln4c4p3grZfgdkGLh4_Xr64Fig/exec';
 
-        function showPage(page, subpage) {
-            const pages = document.querySelectorAll('.page');
-            pages.forEach(p => p.classList.remove('active'));
 
-            const subpages = document.querySelectorAll('.subpage');
-            subpages.forEach(sp => sp.style.display = 'none');
+    <!-- <a href="<?= url ?>?page=page3">Page 3</a> -->
+       <div class="dropdown">
+      <button class="dropbtn">Page 3 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="<?= url ?>?page=page3&subpage=subpage1">Subpage 1</a>
+        <a href="<?= url ?>?page=page3&subpage=subpage2">Subpage 2</a>
+        <a href="<?= url ?>?page=page3&subpage=subpage3">Subpage 3</a>
+      </div>
+    </div>
 
-            const activePage = document.getElementById(page);
-            if (activePage) {
-                activePage.classList.add('active');
-                if (subpage) {
-                    const activeSubpage = document.getElementById(subpage);
-                    if (activeSubpage) {
-                        activeSubpage.style.display = 'block';
-                    }
-                }
-            }
-        }
 
-        function fetchContent(page, subpage) {
-            fetch(`${googleAppScriptUrl}?page=${page}&subpage=${subpage}`)
-                .then(response => response.json())
-                .then(data => {
-                    showPage(data.page, data.subpage);
-                });
-        }
 
-        function parseURLParams() {
-            const params = new URLSearchParams(window.location.search);
-            return {
-                page: params.get('page') || 'home',
-                subpage: params.get('subpage') || ''
-            };
-        }
+<!-- <a href="<?= url ?>?page=page3">Page 4</a>
+<a href="<?= url ?>?page=page3">Page 5</a>
+<a href="<?= url ?>?page=page3">Page 6</a>
+<a href="<?= url ?>?page=page3">Page 7</a>
+<a href="<?= url ?>?page=page3">Page 8</a> -->
 
-        document.addEventListener('DOMContentLoaded', () => {
-            const { page, subpage } = parseURLParams();
-            fetchContent(page, subpage);
 
-            window.addEventListener('popstate', () => {
-                const { page, subpage } = parseURLParams();
-                fetchContent(page, subpage);
-            });
+
+
+
+  </div>
+  <h1>Welcome to My Multi-Level App</h1>
+  <h1>index page</h1>
+
+  <div id="content"></div>
+
+  <script>
+    const googleAppScriptUrl = 'https://script.google.com/macros/s/AKfycbyULj5-GYvS0-uokhDdLYWb6nh0MtRuSlbjQr-nzQABeRgvnyJ30NHzVIby31WHbN9e/exec';
+
+    function showPage(pageContent) {
+      document.getElementById('content').innerHTML = pageContent;
+
+      const page = document.querySelector('.page.active');
+      if (page) {
+        page.classList.remove('active');
+      }
+
+      const newPage = document.querySelector(`.page`);
+      if (newPage) {
+        newPage.classList.add('active');
+      }
+
+      const subpage = document.querySelector(`.subpage`);
+      if (subpage) {
+        subpage.style.display = 'block';
+      }
+    }
+
+    function fetchContent(page, subpage, subsubpage) {
+      let url = `${googleAppScriptUrl}?page=${page}`;
+      if (subpage) url += `&subpage=${subpage}`;
+      if (subsubpage) url += `&subsubpage=${subsubpage}`;
+
+      fetch(url)
+        .then(response => response.text())
+        .then(data => {
+          showPage(data);
         });
-    </script>
+    }
+
+    function parseURLParams() {
+      const params = new URLSearchParams(window.location.search);
+      return {
+        page: params.get('page') || 'index',
+        subpage: params.get('subpage') || null,
+        subsubpage: params.get('subsubpage') || null
+      };
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const { page, subpage, subsubpage } = parseURLParams();
+      fetchContent(page, subpage, subsubpage);
+
+      window.addEventListener('popstate', () => {
+        const { page, subpage, subsubpage } = parseURLParams();
+        fetchContent(page, subpage, subsubpage);
+      });
+    });
+  </script>
 </body>
 </html>
